<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="edu.upenn.cis350.calorietracker.MainActivity">

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="28dp"
        android:textColor="@color/black"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/calorieLabel"
                android:textSize="28dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calorieRemaining"/>

        </LinearLayout>

        <edu.upenn.cis350.calorietracker.CalorieView
            android:id="@+id/calorieView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="20dip"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Macronutrients"
                android:textSize="28dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="Total Fat (g):"
                    android:textSize="14dp"/>

                <TextView
                    android:id="@+id/fatsMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:text="0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="Total Carbohydrates (g):"
                    android:textSize="14dp"/>
                <TextView
                    android:id="@+id/carbsMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:text="0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:text="Total Protein (g):"/>

                <TextView
                    android:id="@+id/proteinsMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:text="0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:text="Total Exercise (min):"/>

                <TextView
                    android:id="@+id/minutesMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:text="0"/>
            </LinearLayout>

        </LinearLayout>

        <Switch android:text="@string/select"
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:showText="true"
            android:splitTrack="true"
            android:switchMinWidth="50sp"
            android:switchPadding="50sp"
            android:trackTint="@color/black"
            android:height="50dp"
            android:textOn="Exercise"
            android:textOff="Food" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/addButton"
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:onClick="onAddButtonClick">
            </Button>

            <Button
                android:id="@+id/showListsButton"
                android:text="@string/lists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:onClick="onListButtonClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/ProfileButton"
                android:text="@string/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:onClick="onProfileButtonClick"
                android:layout_gravity="center" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="History"
                android:id="@+id/history"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:onClick="onHistoryButtonClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/ProgressButton"
                android:text="@string/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:onClick="onProgressButtonClick"/>

            <Button
                android:id="@+id/friendsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onFriendsButtonClick"
                android:text="Friends"
                android:textSize="20dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/achievementButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="View Achievements"
            android:onClick="onAchievementsClick"
            android:layout_gravity="center"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notifications"
            android:id="@+id/notificationButton"
            android:layout_gravity="center_horizontal"
            android:onClick="onNotificationButtonClick"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            />

        <!--Uncomment this to easily access the DB within the app-->
        <!--<Button-->
            <!--android:id="@+id/db"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="20dp"-->
            <!--android:text="db"-->
            <!--android:onClick="ondbClick"-->
            <!--android:layout_gravity="center"-->
            <!--/>-->


    </LinearLayout>
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/easteregg"
        android:onClick="onEasterEggClick"/>

</LinearLayout>
